--- a/Tugas_Data_Science_House_Price_Prediction.ipynb
+++ b/Tugas_Data_Science_House_Price_Prediction.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ojan0319/CobaStock/blob/main/Tugas_Data_Science_House_Price_Prediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ojan0319/HousePredict/blob/main/Tugas_Data_Science_House_Price_Prediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -668,6 +668,37 @@
       "source": [
         "df.info()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Fitur Kolom:\n",
+        "1. id - ID unik untuk setiap rumah yang dijual\n",
+        "2. date - Tanggal penjualan rumah\n",
+        "3. price - Harga setiap rumah yang dijual\n",
+        "4. bedrooms - Jumlah kamar tidur\n",
+        "5. bathrooms - Jumlah kamar mandi, di mana nilai 0.5 berarti toilet tetapi tidak ada shower\n",
+        "6. sqft_living - Luas persegi dari bangunan dalam\n",
+        "7. sqft_lot - Luas persegi dari halaman\n",
+        "8. floors - Jumlah lantai\n",
+        "9. waterfront - Variabel tiruan untuk apakah apartemen itu menghadap ke tepi laut atau tidak\n",
+        "10. view - Indeks dari 0 hingga 4 tentang seberapa bagus tampilan properti itu\n",
+        "11. condition - Indeks dari 1 hingga 5 pada kondisi apartemen\n",
+        "12. grade - Indeks dari 1 hingga 13, di mana 1-3 gagal dalam konstruksi dan desain bangunan, 7 memiliki tingkat konstruksi dan desain rata-rata, dan 11-13 memiliki tingkat kualitas konstruksi dan desain yang tinggi.\n",
+        "13. sqft_above - Luas persegi dari lantai atas bangunan\n",
+        "14. sqft_basement - Luas persegi dari bangunan bawah tanah\n",
+        "15. yr_built - Tahun pertama rumah itu dibangun\n",
+        "16. yr_renovated - Tahun renovasi terakhir rumah\n",
+        "17. zipcode - Area kode pos di mana rumah itu berada\n",
+        "18. lat - Lintang\n",
+        "19. long - Bujur\n",
+        "20. sqft_living15 - Luas persegi bangunan dalam dari 15 tetangga terdekat\n",
+        "21. sqft_lot15 - Luas persegi halaman dari 15 tetangga terdekat\n"
+      ],
+      "metadata": {
+        "id": "H75-OT9-q5Ot"
+      },
+      "id": "H75-OT9-q5Ot"
     },
     {
       "cell_type": "markdown",
